Fix local account detection

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\inetpub\\logs\\IdentityServer\\log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
+
   "AllowedHosts": "*",
 
   "IdentityServer": {
